# ChangeLog for media-video/mplay-sh
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplay-sh/ChangeLog,v 1.1 2007/05/15 11:57:30 zzam Exp $

*mplay-sh-0.5.3 (15 May 2007)

  15 May 2007; Matthias Schwarzott <zzam@gentoo.org> +metadata.xml,
  +mplay-sh-0.5.3.ebuild:
  Initial import of ebuild. Moved here from vdr-testing overlay.
