@@ -2,14 +2,18 @@
 Hash: SHA1
 
 DIST mplay-0.5.3.tgz 26829 RMD160 ec9c069b043e0c5147880807d0e9256fceb25747 SHA1 89a6bbbc0fdd20d055e0ff12c6c5007ec69ca561 SHA256 2dee614796b97a1790ab58f0ee5f248d663376b2d2478061387535ddb6b5cc8e
+EBUILD mplay-sh-0.5.3-r1.ebuild 1157 RMD160 000657bbc97b0dc307f36bac01989f52541aa490 SHA1 6096fcf465fa84f2665da46cae05efcf68f904f6 SHA256 1918597530672be437397d41bcaddf4bc40d1a88126650564797fb175d5e9c30
+MD5 616caf0430e6a08ece5c20622a20fde2 mplay-sh-0.5.3-r1.ebuild 1157
+RMD160 000657bbc97b0dc307f36bac01989f52541aa490 mplay-sh-0.5.3-r1.ebuild 1157
+SHA256 1918597530672be437397d41bcaddf4bc40d1a88126650564797fb175d5e9c30 mplay-sh-0.5.3-r1.ebuild 1157
 EBUILD mplay-sh-0.5.3.ebuild 969 RMD160 aacd7b525b95c058804ee71df82c884b839a68f0 SHA1 a4fc00467bba541d81011170192e9e763487611b SHA256 5932e56e473768b1ab681ab434cdc8abd0529571de1e8cef8bc77438f3cb784a
 MD5 751c62701dbe1a90dcd0475a1bc6abec mplay-sh-0.5.3.ebuild 969
 RMD160 aacd7b525b95c058804ee71df82c884b839a68f0 mplay-sh-0.5.3.ebuild 969
 SHA256 5932e56e473768b1ab681ab434cdc8abd0529571de1e8cef8bc77438f3cb784a mplay-sh-0.5.3.ebuild 969
-MISC ChangeLog 402 RMD160 8b7bfbc49e3319a353aa8105084fbcc51059cac7 SHA1 007a8f1db1043324a612b352a5bbcef0513ee601 SHA256 1e0f9a6afd4fc257563dcb097bdecd852c70a25b7de2bfcd08b9329373d65c95
-MD5 8c968f65f27ce7ee0248bce3908eb4dc ChangeLog 402
-RMD160 8b7bfbc49e3319a353aa8105084fbcc51059cac7 ChangeLog 402
-SHA256 1e0f9a6afd4fc257563dcb097bdecd852c70a25b7de2bfcd08b9329373d65c95 ChangeLog 402
+MISC ChangeLog 565 RMD160 b5855fa67d8b99ee7cf52a8ba9cddf5dd3b60dac SHA1 5494a44562cec8d51268cfd9d988a7a14640fb03 SHA256 394c7aa9c699eca379402509cdc802ab9bd9cc18050974676c43091c2041b191
+MD5 666713426d67900acbeaa529b92c333a ChangeLog 565
+RMD160 b5855fa67d8b99ee7cf52a8ba9cddf5dd3b60dac ChangeLog 565
+SHA256 394c7aa9c699eca379402509cdc802ab9bd9cc18050974676c43091c2041b191 ChangeLog 565
 MISC metadata.xml 251 RMD160 b4bdfc1a9e947ad1d1f76c1942f02057d5cbc993 SHA1 6e174f6e4395999a9dafd53f523e079766c0b094 SHA256 b426b6e6d679a63de74d2c1a21e4da2381fb1b580b0180b041307471d67ab54f
 MD5 3cafef7c72bb98475ad53d15e79ff845 metadata.xml 251
 RMD160 b4bdfc1a9e947ad1d1f76c1942f02057d5cbc993 metadata.xml 251
@@ -17,10 +21,13 @@ SHA256 b426b6e6d679a63de74d2c1a21e4da2381fb1b580b0180b041307471d67ab54f metadata
 MD5 a4a7917e8ff1066744d130a1b53078dc files/digest-mplay-sh-0.5.3 223
 RMD160 7c52b12daa60e4be0f210de253330503ab99e415 files/digest-mplay-sh-0.5.3 223
 SHA256 3496c67bd87eee6e402cb6dab85d3d64a61d5975984c59a5bd2009085c7cb075 files/digest-mplay-sh-0.5.3 223
+MD5 a4a7917e8ff1066744d130a1b53078dc files/digest-mplay-sh-0.5.3-r1 223
+RMD160 7c52b12daa60e4be0f210de253330503ab99e415 files/digest-mplay-sh-0.5.3-r1 223
+SHA256 3496c67bd87eee6e402cb6dab85d3d64a61d5975984c59a5bd2009085c7cb075 files/digest-mplay-sh-0.5.3-r1 223
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.4 (GNU/Linux)
 
-iD8DBQFGSaAzt2vP6XvVdOcRApGyAKC35QPDS8wirJX7gAAZxTLiZVCTwQCgnQ1P
-XP9PzjvmqTm2qhed4d0rpu0=
-=0WQz
+iD8DBQFGc6S+t2vP6XvVdOcRApGJAJ4wu22VegSzxljvApFa+vWmrM/0qACg4pE0
+TIzO/MongEEk9ZdK/JHAh2I=
+=4MtU
 -----END PGP SIGNATURE-----
