@@ -1,0 +1,3 @@
+MD5 1b2cc3c48b56d3eb8b5ba976ee409e01 mplay-0.5.3.tgz 26829
+RMD160 ec9c069b043e0c5147880807d0e9256fceb25747 mplay-0.5.3.tgz 26829
+SHA256 2dee614796b97a1790ab58f0ee5f248d663376b2d2478061387535ddb6b5cc8e mplay-0.5.3.tgz 26829
