@@ -1,6 +1,12 @@
 # ChangeLog for media-video/mplay-sh
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplay-sh/ChangeLog,v 1.1 2007/05/15 11:57:30 zzam Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-video/cvs-repo/gentoo-x86/media-video/mplay-sh/ChangeLog,v 1.2 2007/06/16 08:52:08 zzam Exp $
+
+*mplay-sh-0.5.3-r1 (16 Jun 2007)
+
+  16 Jun 2007; Matthias Schwarzott <zzam@gentoo.org>
+  +mplay-sh-0.5.3-r1.ebuild:
+  Changed tmp-file-location to absolute path.
 
 *mplay-sh-0.5.3 (15 May 2007)
 
